--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shoper2",
   "version": "1.0.0",
-  "description": "",
+  "description": "A shifu-project shop",
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --env development --mode development --content-base src --hot --inline --open",
@@ -10,30 +10,44 @@
   "author": "Egor",
   "license": "ISC",
   "devDependencies": {
+    "react-scripts": "^0.9.5",
+    "style-loader": "^0.21.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
+  },
+  "dependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "bootstrap": "^4.1.2",
+    "classnames": "^2.2.5",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-redux": "^5.0.7",
-    "react-router": "^4.3.1",
+    "ramda": "^0.23.0",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
+    "react-router": "^3.0.5",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
-    "style-loader": "^0.21.0",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.0",
+    "redux-thunk": "^2.2.0",
+    "superagent": "^3.5.2",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.16.2",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
     "webpack-obfuscator": "^0.17.1"
   },
-  "dependencies": {
-    "jquery": "^3.3.1"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AlexLeyba/shifu_shop.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AlexLeyba/shifu_shop/issues"
+  },
+  "homepage": "https://github.com/AlexLeyba/shifu_shop#readme"
 }
